# pit-wall

./: .gitignore  README.md
.github/workflows/: backend.yml  frontend.yml  pipeline.yml
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/pit_wall/: __init__.py  logging_config.py  main.py
backend/pit_wall/api/: middleware.py  routes.py  schemas.py
backend/pit_wall/data/: curves.json  curves.py
backend/pit_wall/sim/: calibration.py  fuel.py  simulator.py  validator.py
backend/tests/: test_api_races.py  test_api_simulate.py  test_calibration.py  test_curves_loader.py  test_health.py  test_middleware.py  test_sim_fuel.py  test_simulator.py  test_validator.py
data-pipeline/: pyproject.toml
data-pipeline/pipeline/: build.py  fit.py  fuel.py  ingest.py  manifest.py  manifest.yaml
data-pipeline/tests/: test_build.py  test_fit.py  test_fuel.py  test_ingest.py  test_manifest.py
frontend/: package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx  providers.tsx
frontend/app/about/: page.tsx
frontend/app/race/[id]/: error.tsx  loading.tsx  not-found.tsx  page.tsx
frontend/components/: ActualStrategyCard.tsx  CompoundPicker.tsx  LapTimeChart.tsx  RaceCard.tsx  ResponsiveBanner.tsx  ResultsPanel.tsx  StintBreakdown.tsx  StintInspector.tsx  StrategyEditor.tsx  Timeline.tsx
frontend/lib/: api.ts  queries.ts  types.ts  useStrategy.ts
frontend/tests/: CompoundPicker.test.tsx  RaceCard.test.tsx  ResultsPanel.test.tsx  Timeline.test.tsx  api.test.ts  smoke.test.tsx  useStrategy.test.ts
