[project]
name = "pit-wall"
version = "0.1.0"
description = "F1 race strategy simulator — backend"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136",
    "uvicorn[standard]>=0.30",
    "loguru>=0.7",
    "pydantic>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["pit_wall"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
